UtahLiveDataTest/src/objects/AmendmentRequest__c.object
<CustomObject>
    <description>[Business] Stores all the change requests information</description>
    <fields>
        <fullName>AdjustedAmountThisAction__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Adjusted amount in this action</description>
        <label>Adjusted Amount This Action</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AdministrationAcronym__c</fullName>
        <label>Administration Acronym</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmendAwardCount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>AmendAwardCount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AmendmentAppBudgetCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AmendmentAppBudgetCategory</label>
        <referenceTo>ApplicationBudgetCategory2__c</referenceTo>
        <relationshipLabel>Amendment Requests</relationshipLabel>
        <relationshipName>Amendment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmendmentBudgetPeriod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Budget period to get next budget period details associated with the grant</description>
        <label>Budget Period</label>
        <referenceTo>BudgetPeriod__c</referenceTo>
        <relationshipLabel>Amendment Requests</relationshipLabel>
        <relationshipName>Amendment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmendmentBudgetStartEndDate__c</fullName>
        <description>An input field to withhold Start and End date of a budget period. E.g - 6/7/2017--7/7/2018</description>
        <label>AmendmentBudgetStartEndDate</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AmendmentContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amendment Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Amendment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmendmentRequestAccount__c</fullName>
        <formula>Award__r.Grant__r.InternalOrganization__r.Id</formula>
        <label>AmendmentRequestAccount</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApprovalDate__c</fullName>
        <label>ApprovalDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AwardGrantorOrg__c</fullName>
        <formula>Award__r.GrantorOrganization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AwardGrantorOrg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardName__c</fullName>
        <formula>Award__r.GrantAwardName__c</formula>
        <label>Award Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AwardOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is copied from award and is used in approval process of amendment request</description>
        <label>Award Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requestsi0vG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipName>Amendment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AwardedBudgetPeriodEndDate__c</fullName>
        <formula>Award__r.BudgetPeriodEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AwardedBudgetPeriodStartDate__c</fullName>
        <formula>Award__r.BudgetPeriodStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Budget Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AwardedProjectPeriodEndDate__c</fullName>
        <formula>Award__r.ProjectPeriodEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AwardedProjectPeriodStartDate__c</fullName>
        <formula>Award__r.ProjectPeriodStartDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Project Period Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetNarrativeProposed__c</fullName>
        <label>BudgetNarrativeProposed</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BudgetNarrativeThisRevisionOnly__c</fullName>
        <label>BudgetNarrativeThisRevisionOnly</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BudgetNarrative__c</fullName>
        <description>Running explanation/justification of Budget</description>
        <inlineHelpText>Running explanation/justification of Budget</inlineHelpText>
        <label>BudgetNarrative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Period Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodExtension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Period Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodSequenceNumber__c</fullName>
        <label>BudgetPeriodSequenceNumber</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <formula>TEXT(MONTH(AwardedBudgetPeriodStartDate__c)) + &apos;/&apos; + TEXT(DAY(AwardedBudgetPeriodStartDate__c)) + &apos;/&apos; + TEXT(YEAR(AwardedBudgetPeriodStartDate__c)) + &apos; To &apos; + TEXT(MONTH(AwardedBudgetPeriodEndDate__c)) + &apos;/&apos; + TEXT(DAY(AwardedBudgetPeriodEndDate__c)) + &apos;/&apos; + TEXT(YEAR(AwardedBudgetPeriodEndDate__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetRevisionCount__c</fullName>
        <defaultValue>1</defaultValue>
        <label>BudgetRevisionCount</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BureauChief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bureau Chief</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests33</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeType__c</fullName>
        <label>Type Of Change</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Work Plan</fullName>
                </value>
                <value>
                    <fullName>Scope</fullName>
                </value>
                <value>
                    <fullName>Spending Plan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>2000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ContactChangeDescription__c</fullName>
        <description>Explanation for Change of contact</description>
        <label>Contact Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CostIncrease__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to specify if the cost has increased</description>
        <label>Cost Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreatedMonth__c</fullName>
        <formula>CASE(Month(DATEVALUE(CreatedDate)),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)</formula>
        <label>CreatedMonth</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentBudgetPeriodEndDate__c</fullName>
        <formula>Grant__r.BudgetPeriodEndDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentProjectDirectorName__c</fullName>
        <formula>Grant__r.ProjectDirector__r.FirstName &amp;&apos;&apos;&amp; Grant__r.ProjectDirector__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Project Director Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentProjectDirector__c</fullName>
        <formula>Grant__r.ProjectDirector__c</formula>
        <label>Current Project Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentProjectPeriodEndDate__c</fullName>
        <inlineHelpText>Current project period end date of Grant</inlineHelpText>
        <label>Current Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CurrentRevisionNumber__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Index number of the current budget revision</description>
        <label>CurrentRevisionNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Budget__c</fullName>
        <label>Current Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DataEvaluator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Evaluator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DataEvaluators</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExecutiveApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Executive Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinalDecisionMade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Decision Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FiscalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantAwardExtension__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Extension Date</description>
        <label>Project Period Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrantIntOrgName__c</fullName>
        <formula>Award__r.Grant__r.InternalOrganization__r.Name</formula>
        <label>Grant Int Org Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantMonitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant Monitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantName__c</fullName>
        <formula>Grant__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grant Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipName>Amendment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrantorOrg__c</fullName>
        <formula>Award__r.GranteeOrganization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrantorOrg</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantsManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantsManager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_RequestshQ46</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GrndParentGrant__c</fullName>
        <formula>Award__r.Grant__r.Name</formula>
        <label>GrndParentGrant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideAddAttachment__c</fullName>
        <formula>AND(
  IsSubmitted__c,
  $User.IsExternalUser__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Add Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAmendAward__c</fullName>
        <formula>NOT(
OR(
   ISPICKVAL(Status__c,&apos;Approved&apos;),ISPICKVAL(Status__c,&apos;Accepted&apos;), AmendAwardCount__c != 1
  )
)</formula>
        <label>Hide Amend Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAmendType__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;),ISPICKVAL(Status__c,&apos;Approved&apos;),ISPICKVAL(Status__c,&apos;Accepted&apos;),ISPICKVAL(Status__c,&apos;Rejected&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideAmendType</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetGridBuildup__c</fullName>
        <formula>if(OR(Award__r.Grant__r.BuildUpGridNeeded__c=&apos;No&apos;,Award__r.Grant__r.BuildUpGridNeeded__c=null),true,false)</formula>
        <label>HideBudgetGridBuildup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetGrid__c</fullName>
        <formula>OR(Award__r.Grant__r.BuildUpGridNeeded__c=&apos;No&apos;,AND(BudgetPeriodChange__c=false,BudgetPeriodExtension__c=false))</formula>
        <label>Hide Budget Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetTableIfNotUSBECTE__c</fullName>
        <formula>IF(OR( AwardGrantorOrg__c != &apos;USBE&apos;,  Award__r.ProgramBudgetTypeUSBE__c != &apos;CTE&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBudgetTableIfNotUSBECTE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideBudgetTableIfUSBECTE__c</fullName>
        <formula>IF( OR(AwardGrantorOrg__c != &apos;USBE&apos;,  Award__r.ProgramBudgetTypeUSBE__c = &apos;CTE&apos; ), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideBudgetTableIfUSBECTE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideButton__c</fullName>
        <description>Hide button is used to hide Edit and Submit to grantor button</description>
        <formula>OwnerId !=  $User.Id || TEXT(Status__c) != &apos;In Progress&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hide button is used to hide Edit and Submit to grantor button</inlineHelpText>
        <label>Hide Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeleteAttachment__c</fullName>
        <formula>IF(
  OR(
    $Profile.Name = &apos;Project Admin&apos;,
    $Profile.Name = &apos;Project Staff&apos;
  ),
  OR(
    IsSubmitted__c,
    NOT(ISPICKVAL(Status__c, &apos;Initiated&apos;))
  ),
  OR(
    IsSent__c,
    NOT(ISPICKVAL(Status__c, &apos;Initiated&apos;))
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Delete Attachment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDelete__c</fullName>
        <formula>OR(
  NOT(ISPICKVAL(Status__c, &apos;Initiated&apos;)),
  AND(
    OwnerId != $User.Id,
    ProgramManager__c != $User.Id
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDraftAward__c</fullName>
        <formula>OR(
  AND(
    NOT(ISPICKVAL(Status__c, &apos;Approved&apos;)),
    NOT(AND(
      OR(
        ISPICKVAL(Type__c, &apos;Continuation&apos;),
        ISPICKVAL(Type__c, &apos;Termination&apos;)
      ),
      ISPICKVAL(Status__c, &apos;Initiated&apos;)
    ))
  ),
  AND(
    IsSent__c,
    NOT(IsSubmitted__c)
  ),
  $User.Id != ProgramManager__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Draft Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEdit2__c</fullName>
        <formula>OR(NOT(OR(ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Change Requested&apos;))),IF(Award__c!=null,Award__r.HideAmendmentButton__c,Award__r.HideAmendmentButton__c))</formula>
        <label>HideEdit2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDelete__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c, &apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditTable__c</fullName>
        <formula>OR(
  AND(
    $Profile.Name != &apos;Project Admin&apos;,
    $Profile.Name != &apos;Project Staff&apos;
  ),
  IsSubmitted__c,
  AND(
    NOT(ISPICKVAL(Type__c, &apos;Cost-Extension&apos;)),
    NOT(ISPICKVAL(Type__c, &apos;Award Increase/Decrease&apos;)),
    NOT(ISPICKVAL(Type__c, &apos;Budget Revision&apos;))
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEdit__c</fullName>
        <formula>OR(
  AND(
    IsSent__c, 
    NOT(
      OR(
        $Profile.Name = &apos;Project Admin&apos;,
        $Profile.Name = &apos;Project Staff&apos;
      )
    ),
    OR(
      $Profile.Name = &apos;Program Manager&apos;,
      $Profile.Name = &apos;Program User&apos;,
      $Profile.Name = &apos;Executive User&apos;,
      $Profile.Name = &apos;Fiscal User&apos;
    )
  ), 
  AND(
    IsSubmitted__c, 
    OR(
      $Profile.Name = &apos;Project Admin&apos;,
      $Profile.Name = &apos;Project Staff&apos;
    )
  ),
  AND(
    ISPICKVAL(Type__c,&apos;Termination&apos;),
    NOT(ISPICKVAL(Status__c,&apos;Drafted&apos;))
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideExternalEdit__c</fullName>
        <formula>NOT(ISPICKVAL(Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideExternalEdit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideGranteeEditButton__c</fullName>
        <formula>OR(ISPICKVAL(Status__c,&apos;Approved&apos;),ISPICKVAL(Status__c,&apos;Submitted to Grantor&apos;),ISPICKVAL(Status__c,&apos;Accepted&apos;),ISPICKVAL(Status__c,&apos;Rejected&apos;),ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;),IF(Award__c!=null,Award__r.HideAmendmentButton__c,Award__r.HideAmendmentButton__c))</formula>
        <label>HideGranteeEditButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideRegularBudgetGrid__c</fullName>
        <formula>if(Award__r.Grant__r.BuildUpGridNeeded__c=&apos;Yes&apos;,true,false)</formula>
        <label>HideRegularBudgetGrid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSendToAwardee__c</fullName>
        <formula>OR(
  ISPICKVAL(Type__c,&apos;Termination&apos;),
  ISPICKVAL(Type__c,&apos;Continuation&apos;), 
  IsSent__c,
  AND(
    $User.Id != ProjectOfficer__c,
    $User.Id != GrantMonitor__c,
    $User.Id != ProgramManager__c
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Send To Awardee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSendToManager__c</fullName>
        <formula>AND(RecordType.Name  != &apos;Termination&apos;, RecordType.Name != &apos;Continuation&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Send To Manager</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmit__c</fullName>
        <formula>OR(AND(
  OR(
    NOT(IsSent__c),
    IsSubmitted__c, 
    $Profile.Name != &apos;Project Admin&apos;
  ),
  OR(
    $User.Id != ProgramManager__c,
    NOT(ISPICKVAL(Type__c, &apos;Termination&apos;))
  )
  
),
text( Type__c ) = &apos;Termination&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSubmitforApproval__c</fullName>
        <formula>NOT(
  AND(
    OR(
      $User.Id ==  ProjectOfficer__c,
      $User.Id ==  GrantMonitor__c
    ),
    text(Status__c) == &apos;Initiated&apos;,
    text( Type__c ) == &apos;Termination&apos;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Submit for Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideViewTable__c</fullName>
        <formula>AND(
  OR(
    $Profile.Name = &apos;Project Admin&apos;,
    $Profile.Name = &apos;Project Staff&apos;
  ),
  NOT(IsSubmitted__c),
  OR(
    ISPICKVAL(Type__c, &apos;Cost-Extension&apos;),
    ISPICKVAL(Type__c, &apos;Award Increase/Decrease&apos;),
    ISPICKVAL(Type__c, &apos;Budget Revision&apos;)
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide View Table</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <label>Impact</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IndirectCostPercentage__c</fullName>
        <defaultValue>0</defaultValue>
        <label>IndirectCostPercentage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>InternalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>InternalApprover</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.ProfileName__c</field>
                <operation>equals</operation>
                <value>SPI</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InternalReviewStatus__c</fullName>
        <label>InternalReviewStatus</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Change Requested</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsAmendment__c</fullName>
        <formula>OR(
  ISPICKVAL(Type__c, &apos;No Cost-Extension&apos;),
  ISPICKVAL(Type__c, &apos;Cost-Extension&apos;),
  ISPICKVAL(Type__c, &apos;Award Increase/Decrease&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Amendment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecordRecalled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRecordRecalled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsStatus__c</fullName>
        <formula>OR(!ISPICKVAL(Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsStatus</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSubmitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSubmitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IssuedAward__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Issued Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipName>Amendment_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <label>Justification</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KeyContactChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Contact Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KeyPOCLookUp__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>KeyPOCLookUp</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please choose a KeyPOC</errorMessage>
            <filterItems>
                <field>GrantContact__c.Award__c</field>
                <operation>equals</operation>
                <valueField>$Source.Award__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>GrantContact__c</referenceTo>
        <relationshipLabel>Amendment Requests</relationshipLabel>
        <relationshipName>Amendment_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KeyPOC__c</fullName>
        <formula>Award__r.Grant__r.GranteePOC__r.FirstName + &apos; &apos; +  Award__r.Grant__r.GranteePOC__r.LastName</formula>
        <label>Key POC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyPersonnel__c</fullName>
        <description>Internal organization point of contact (Key Personnel)</description>
        <label>Key Personnel</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LEAName__c</fullName>
        <formula>Award__r.LEAName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LEA Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegalApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MatchPercentage__c</fullName>
        <formula>(( TotalCashMatch__c + TotalInkindMatch__c ) / TotalFederalAmount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Match Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NameTemplate__c</fullName>
        <formula>&apos;AR-&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name Template</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewBudgetPeriodEndDate__c</fullName>
        <label>New Budget Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewEndDate__c</fullName>
        <description>Modified End Date after the Amendment</description>
        <label>New Project Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NewGranteePOCName__c</fullName>
        <formula>NewGranteePOC__r.FirstName &amp; &quot; &quot; &amp; NewGranteePOC__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NewGranteePOCName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewGranteePOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requestsi42b</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewKeyPOC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New Key POC</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact.AccountRecordType__c</field>
                <operation>equals</operation>
                <value>Recipient</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Amendment Requests (New Key POC)</relationshipLabel>
        <relationshipName>Change_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NewKeyPersonnel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NewKeyPersonnel</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_Requests6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NextBudgetPeriod__c</fullName>
        <label>NextBudgetPeriod</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NoCostExtension__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Cost Extension</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotSent__c</fullName>
        <formula>NOT(IsSent__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NotSubmitted__c</fullName>
        <formula>NOT(IsSubmitted__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Not Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Project_Goals_Milestones__c</fullName>
        <label>Original Project Goals/Milestones</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OtherChangeDescription__c</fullName>
        <description>Description of the Change</description>
        <label>Other Change Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OtherChange__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Description of the Change</description>
        <label>Other Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>POCEmail__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>POCFirstName__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POCLastName__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>POCPhone__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PaymentApprover1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_RequestshQEG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_RequestshQF9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentApprover3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PaymentApprover3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Amendment_RequestshQG7</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>